# tgwipe

./: .gitignore  README.md  pyproject.toml
tgwipe/: __main__.py  cleaner.py
